<resources>
  <string name="app_name">待办清单</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="test">Test</string>
  <string name="alert">alert</string>
  <string name="_8_00">12小时24分钟</string>
  <string name="urgent">紧急</string>
  <string name="important">重要</string>
  <string name="todo_title">待办事项标题</string>
  <string name="advanced_settings">高级选项</string>
  <string name="set_important">设为重要</string>
  <string name="set_urgent">设为紧急</string>
  <string name="confirm">确定</string>
  <string name="cancel">取消</string>
  <string name="less_options">隐藏选项</string>
  <string name="notification_time_">通知时间：</string>
  <string name="set_time">选取时间</string>
  <string name="deadline_">截止时间：</string>
  <string name="start_time_">开始时间：</string>
  <string name="edit">编辑</string>
  <string name="sub_items_">子项目：</string>
  <string name="not_set">未设置</string>
  <string name="input_content">输入内容</string>
  <string name="new_item">添加项目</string>
  <string name="edit_todo">修改待办事项</string>
  <string name="new_todo">新建待办事项</string>
  <string name="deleted">已删除</string>
  <string name="undo">撤销</string>
  <string name="expired">已过期</string>
  <string name="expiring_soon">即将截止</string>
  <string name="not_started">未开始</string>
</resources>
