<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <EditText
    android:id="@+id/editTodoTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:hint="@string/todo_title"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Test"
    tools:ignore="Autofill"/>
  <Button
    android:id="@+id/moreOptions"
    style="@android:style/Widget.Material.Button.Borderless.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:drawableStart="@drawable/ic_arrow_drop_down_white_24dp"
    android:drawableTint="@color/colorAccent"
    android:text="@string/advanced_settings"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTodoTitle"/>
  <CheckBox
    android:id="@+id/setImportant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_important"
    app:layout_constraintBottom_toBottomOf="@+id/moreOptions"
    app:layout_constraintEnd_toStartOf="@+id/moreOptions"
    app:layout_constraintStart_toEndOf="@+id/setUrgent"
    app:layout_constraintTop_toTopOf="@+id/moreOptions"/>
  <CheckBox
    android:id="@+id/setUrgent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_urgent"
    app:layout_constraintBottom_toBottomOf="@+id/setImportant"
    app:layout_constraintEnd_toStartOf="@+id/setImportant"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/setImportant"/>
  <LinearLayout
    android:layout_width="0dp"
    android:id="@+id/moreOptionsLayout"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/moreOptions">
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>