<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/white"
  tools:layout_editor_absoluteY="81dp">
  <View
    android:id="@+id/clickableBg"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/ripple_bg"
    app:layout_constraintBottom_toTopOf="@+id/view2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <cn.refactor.library.SmoothCheckBox
    android:id="@+id/completedBox"
    android:layout_width="28dp"
    android:layout_height="28dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    app:color_checked="@color/colorAccent"
    app:color_tick="@android:color/white"
    app:layout_constraintBottom_toTopOf="@+id/view2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:stroke_width="3dp"/>
  <ImageView
    android:id="@+id/alertIcon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:contentDescription="@string/alert"
    android:tint="@android:color/darker_gray"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/todoTitle"
    app:srcCompat="@drawable/ic_alarm_black_24dp"/>
  <TextView
    android:id="@+id/todoTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:ellipsize="end"
    android:maxWidth="270dp"
    android:singleLine="true"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/clickableBg"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="@string/test"/>
  <LinearLayout
    android:id="@+id/subItemsLayout"
    android:layout_width="363dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view2">
  </LinearLayout>
  <TextView
    android:id="@+id/alarmTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="@string/_8_00"
    app:layout_constraintBottom_toBottomOf="@+id/alertIcon"
    app:layout_constraintStart_toEndOf="@+id/alertIcon"
    app:layout_constraintTop_toTopOf="@+id/alertIcon"/>
  <TextView
    android:id="@+id/urgency"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:padding="4dp"
    android:background="@drawable/tag_bg"
    android:backgroundTint="@color/colorRed"
    android:text="@string/urgent"
    android:textColor="@android:color/white"
    android:textSize="10sp"
    app:layout_constraintBottom_toBottomOf="@+id/todoTitle"
    app:layout_constraintStart_toEndOf="@+id/todoTitle"
    app:layout_constraintTop_toTopOf="@+id/todoTitle"
    tools:ignore="SmallSp"/>
  <TextView
    android:id="@+id/importance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:padding="4dp"
    android:background="@drawable/tag_bg"
    android:text="@string/important"
    android:textColor="@android:color/white"
    android:textSize="10sp"
    app:layout_constraintBottom_toBottomOf="@+id/urgency"
    app:layout_constraintStart_toEndOf="@+id/urgency"
    app:layout_constraintTop_toTopOf="@+id/urgency"
    tools:ignore="SmallSp"/>
  <View
    android:id="@+id/view2"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/alertIcon"/>
  <View
    android:id="@+id/view"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@android:color/transparent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/subItemsLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>