<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:layout_editor_absoluteY="81dp">

  <TextView
    android:id="@+id/startTimeText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView5"
    tools:text="2019年12月31日 8:00"/>
  <TextView
    android:id="@+id/textView5"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:text="@string/start_time_"
    android:textColor="@color/colorAccent"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/notificationTimeText"/>
  <TextView
    android:id="@+id/textView6"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:text="@string/deadline_"
    android:textColor="@color/colorAccent"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/startTimeText"/>
  <TextView
    android:id="@+id/subItemsTitle"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:text="@string/sub_items_"
    android:textColor="@color/colorAccent"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/deadlineText"/>
  <TextView
    android:id="@+id/notificationTimeText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3"
    tools:text="2019年12月31日 8:00"/>
  <TextView
    android:id="@+id/deadlineText"
    android:layout_width="wrap_content"
    android:layout_height="25dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6"
    tools:text="2019年12月31日 8:00"/>
  <TextView
    android:id="@+id/textView3"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:text="@string/notification_time_"
    android:textColor="@color/colorAccent"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ImageButton
    android:id="@+id/editNotificationTime"
    style="@android:style/Widget.DeviceDefault.ImageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/edit"
    android:tint="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="@+id/notificationTimeText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView3"
    app:srcCompat="@drawable/ic_edit_black_24dp"/>
  <ImageButton
    android:id="@+id/editStartTime"
    style="@android:style/Widget.DeviceDefault.ImageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/edit"
    android:tint="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="@+id/startTimeText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView5"
    app:srcCompat="@drawable/ic_edit_black_24dp"/>
  <ImageButton
    android:id="@+id/editDeadline"
    style="@android:style/Widget.DeviceDefault.ImageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/edit"
    android:tint="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="@+id/deadlineText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView6"
    app:srcCompat="@drawable/ic_edit_black_24dp"/>
  <ImageButton
    android:id="@+id/addSubItems"
    style="@android:style/Widget.DeviceDefault.ImageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/edit"
    android:tint="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="@+id/subItemsTitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/subItemsTitle"
    app:srcCompat="@drawable/ic_add_white_24dp"/>
  <me.gujun.android.taggroup.TagGroup
    android:id="@+id/tagGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:atg_inputHint="@string/new_item"
    app:atg_borderColor="@color/colorAccent"
    app:atg_checkedBackgroundColor="@color/colorAccent"
    app:atg_checkedBorderColor="@color/colorAccent"
    app:atg_isAppendMode="true"
    app:atg_textColor="@color/colorAccent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/subItemsTitle">

  </me.gujun.android.taggroup.TagGroup>

</androidx.constraintlayout.widget.ConstraintLayout>